compiler/tests/compiler/must_fail/t_09.rs.exp.err
tests/compiler/must_fail/t_09.rs:2:3: 2:10 error: arity of return value does not match type, got 1, expected 2
  return x
  ^^^^^^^^
